[package]
name = "leptos-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
supabase-js-rs = { path = "../../" }
leptos = { version = "0.1.0-alpha", features = ["stable"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"